add styles to the story activity, remove app bar from home page.

--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -32,5 +32,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:textSize="30sp"
-        android:text="Nice Running into You..." />
+        android:text="Nice Running into You..."
+        android:textColor="@color/colorStoryAccent" />
 </RelativeLayout>
